@@ -8,8 +8,31 @@ before_install:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then export TOXENV="py27"; fi
   - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then export TOXENV="py34"; fi
 
+  - sudo apt-get update
+  - sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran
+  - sudo apt-get install -qq swig libfreetype6-dev libpng12-dev graphviz
+
+  - echo "++++++++++++ Install conda with numpy and matplotlib ++++++++++++++++++"
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy matplotlib
+  - source activate test-environment
+  - pip freeze
+
 install:
-  - pip install tox
+  - pip install pytest
 
 script:
-  - tox
+  - python setup.py sdist
+  - pip install dist/simtools-`python setup.py --version`.tar.gz
+  - py.test -v tests
