@@ -5,5 +5,8 @@ envlist =
 [testenv]
 deps =
     pytest
+    numpy
+    matplotlib
+    configobj
 commands =
     py.test -v tests
